--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desktop-messenger",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A minimal Facebook Messenger application",
   "main": "main.js",
   "scripts": {
@@ -14,6 +14,22 @@
   "author": "Binjuhor",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^6.0.7"
+    "electron": "^6.0.7",
+    "electron-builder": "^21.2.0"
+  },
+  "build": {
+    "appId": "io.eibit.app",
+    "productName": "Messenger",
+    "copyright": "Copyright © 2019 ${author}",
+    "mac": {
+      "category": "desktop.app"
+    },
+    "directories": {
+      "buildResources": "build"
+    }
+  },
+  "scripts": {
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   }
 }
